Added serial debug to main. Refactored projects configuration to compile for differente CPU targets. Added makefile and updated readme.

--- a/FingerPrint/.project
+++ b/FingerPrint/.project
@@ -3,9 +3,10 @@
 	<name>FingerPrint</name>
 	<comment></comment>
 	<projects>
-		<project>Attiny84Core</project>
+		<project>AttinyCore</project>
 		<project>Bounce2</project>
 		<project>FPS_GT511C1R</project>
+		<project>SoftwareSerial</project>
 		<project>SoftwareSerialTiny</project>
 	</projects>
 	<buildSpec>
