Commented out Serial print in SendCommand function: the print caused problems if UseSerialDebug = true!! Refactored projects configuration to compile for differente CPU targets.

--- a/FPS_GT511C1R/.project
+++ b/FPS_GT511C1R/.project
@@ -3,7 +3,7 @@
 	<name>FPS_GT511C1R</name>
 	<comment></comment>
 	<projects>
-		<project>SoftwareSerialTiny</project>
+		<project>SoftwareSerial</project>
 	</projects>
 	<buildSpec>
 		<buildCommand>
