Added binaries to ignore, modifiied debug info in main, deleted unused datasheets

--- a/FingerPrint/.cproject
+++ b/FingerPrint/.cproject
@@ -90,7 +90,7 @@
 				</configuration>
 			</storageModule>
 			<storageModule moduleId="org.eclipse.cdt.core.externalSettings">
-				<externalSettings containerId="FPS_GT511C1R;" factoryId="org.eclipse.cdt.core.cfg.export.settings.sipplier">
+				<externalSettings containerId="FPS_GT511C1R;de.innot.avreclipse.configuration.lib.release.106305086.668022337" factoryId="org.eclipse.cdt.core.cfg.export.settings.sipplier">
 					<externalSetting/>
 				</externalSettings>
 				<externalSettings containerId="Bounce2;de.innot.avreclipse.configuration.lib.release.1004168755" factoryId="org.eclipse.cdt.core.cfg.export.settings.sipplier"/>
