--- a/RFID/.settings/de.innot.avreclipse.core.prefs
+++ b/RFID/.settings/de.innot.avreclipse.core.prefs
@@ -6,10 +6,15 @@ avrtarget/UseEEPROM=false
 avrtarget/UseExtendedRAMforHeap=true
 avrtarget/avrdude/BitBangDelay=
 avrtarget/avrdude/Bitclock=
-avrtarget/avrdude/EEPROMFile=
-avrtarget/avrdude/EEPROMFromConfig=true
+avrtarget/avrdude/EEPROMFile=/home/gionata/workspace_Arduino/Garage_RFID/RFID/RFID.eep
+avrtarget/avrdude/EEPROMFromConfig=false
 avrtarget/avrdude/FlashFile=
 avrtarget/avrdude/FlashFromConfig=true
+avrtarget/avrdude/Fuses/ByteValues=226\:215\:255
+avrtarget/avrdude/Fuses/FileName=
+avrtarget/avrdude/Fuses/MCUid=attiny84
+avrtarget/avrdude/Fuses/UseFile=false
+avrtarget/avrdude/Fuses/Write=false
 avrtarget/avrdude/NoChipErase=false
 avrtarget/avrdude/NoSigCheck=false
 avrtarget/avrdude/NoVerify=false
@@ -17,7 +22,7 @@ avrtarget/avrdude/NoWrite=false
 avrtarget/avrdude/OtherOptions=
 avrtarget/avrdude/ProgrammerID=programmerconfig.1
 avrtarget/avrdude/UseCounter=false
-avrtarget/avrdude/WriteEEPROM=false
+avrtarget/avrdude/WriteEEPROM=true
 avrtarget/avrdude/WriteFlash=true
 avrtarget/perConfig=false
 eclipse.preferences.version=1
