--- a/RFID/.cproject
+++ b/RFID/.cproject
@@ -153,17 +153,16 @@
 							<tool id="de.innot.avreclipse.tool.linker.winavr.app.debug.218737902" name="AVR C Linker" superClass="de.innot.avreclipse.tool.linker.winavr.app.debug"/>
 							<tool command="avr-g++" commandLinePattern="${COMMAND} ${FLAGS} ${OUTPUT_FLAG} ${OUTPUT_PREFIX}${OUTPUT} ${INPUTS}" errorParsers="org.eclipse.cdt.core.GLDErrorParser" id="de.innot.avreclipse.tool.cpplinker.app.debug.1049836672" name="AVR C++ Linker" superClass="de.innot.avreclipse.tool.cpplinker.app.debug">
 								<option id="de.innot.avreclipse.cpplinker.option.libs.271120935" name="Libraries (-l)" superClass="de.innot.avreclipse.cpplinker.option.libs" valueType="libs">
-									<listOptionValue builtIn="false" srcPrefixMapping="" srcRootPath="" value="bounce2"/>
-									<listOptionValue builtIn="false" srcPrefixMapping="" srcRootPath="" value="seeedrfid"/>
-									<listOptionValue builtIn="false" srcPrefixMapping="" srcRootPath="" value="softwareserial"/>
-									<listOptionValue builtIn="false" srcPrefixMapping="" srcRootPath="" value="attinycore"/>
+									<listOptionValue builtIn="false" value="bounce2"/>
+									<listOptionValue builtIn="false" value="seeedrfid"/>
+									<listOptionValue builtIn="false" value="softwareserial"/>
+									<listOptionValue builtIn="false" value="attinycore"/>
 								</option>
 								<option id="de.innot.avreclipse.cpplinker.option.libpath.1312384225" name="Libraries Path (-L)" superClass="de.innot.avreclipse.cpplinker.option.libpath" valueType="stringList">
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/AttinyCore/Attiny84}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/SeeedRFID/Attiny84}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/Bounce2/Attiny84}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/SoftwareSerial/Attiny84}&quot;"/>
-									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/${ProjName}/Lib}&quot;"/>
 								</option>
 								<option id="de.innot.avreclipse.cpplinker.option.otherlinkargs.906166816" name="Other Arguments" superClass="de.innot.avreclipse.cpplinker.option.otherlinkargs" value="-Wl,-gc-sections " valueType="string"/>
 								<inputType id="de.innot.avreclipse.tool.cpplinker.input.1939624810" name="OBJ Files" superClass="de.innot.avreclipse.tool.cpplinker.input">
